logs/django-compositekey.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/compositekey'...
Listing './lib/python3.5/site-packages/compositekey/core'...
Listing './lib/python3.5/site-packages/compositekey/core/management'...
Listing './lib/python3.5/site-packages/compositekey/db'...
Listing './lib/python3.5/site-packages/compositekey/db/backends'...
Compiling './lib/python3.5/site-packages/compositekey/db/backends/creation.py'...
***   File "./lib/python3.5/site-packages/compositekey/db/backends/creation.py", line 141
    print "Skip constraint: TODO", rel_class, model
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compositekey/db/backends/oracle'...
Listing './lib/python3.5/site-packages/compositekey/db/backends/postgresql_psycopg2'...
Listing './lib/python3.5/site-packages/compositekey/db/models'...
Listing './lib/python3.5/site-packages/compositekey/db/models/fields'...
Compiling './lib/python3.5/site-packages/compositekey/db/models/fields/wrap.py'...
***   File "./lib/python3.5/site-packages/compositekey/db/models/fields/wrap.py", line 49
    if len(values) <> len(fields):
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/compositekey/db/models/sql'...
Listing './lib/python3.5/site-packages/compositekey/forms'...
Compiling './lib/python3.5/site-packages/compositekey/tests.py'...
***   File "./lib/python3.5/site-packages/compositekey/tests.py", line 20
    print " %s)\n%s\n\n" % (i, query['sql'])
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_compositekey-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
